--- a/JDBC with Spring/src/main/resources/application.properties
+++ b/JDBC with Spring/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/all-items
+spring.datasource.url=jdbc:mysql://localhost:3306/sys
 spring.datasource.username=root
 spring.datasource.password=Platifi@123
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
